add logistic regression model
